Bug 134221 - SMARTART caption text location is wrong
Summary: SMARTART caption text location is wrong
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
3.6.0.4 release
Hardware: All All
: medium normal
Assignee: nd101
URL:
Whiteboard: target:7.1.0
Keywords: filter:pptx, implementationError
Depends on:
Blocks:
 
Reported: 2020-06-22 07:07 UTC by nd101
Modified: 2020-07-20 09:04 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
sample document (50.42 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2020-06-22 07:07 UTC, nd101
Details
in Impress (17.29 KB, image/png)
2020-06-22 07:07 UTC, nd101
Details
in MSO (16.60 KB, image/png)
2020-06-22 07:08 UTC, nd101
Details
sample in MSO, older Lo and fixed LO (89.64 KB, image/png)
2020-07-17 17:34 UTC, Timur
Details

Note You need to log in before you can comment on or make changes to this bug.
Description nd101 2020-06-22 07:07:04 UTC
Description:
As illustrated in the attached document, text is centered instead of placed off the center.

Steps to Reproduce:
1.Open the attached document 
2.
3.

Actual Results:
Text is placed in the center and fails to show

Expected Results:
Text is shown correctly


Reproducible: Always


User Profile Reset: No



Additional Info:
Text is placed in the center and fails to show
Comment 1 nd101 2020-06-22 07:07:33 UTC
Created attachment 162292 [details]
sample document
Comment 2 nd101 2020-06-22 07:07:48 UTC
Created attachment 162293 [details]
in Impress
Comment 3 nd101 2020-06-22 07:08:19 UTC
Created attachment 162294 [details]
in MSO
Comment 4 nd101 2020-06-22 07:08:55 UTC
I will submit a patch
Comment 5 BogdanB 2020-06-22 09:07:20 UTC
confirm it
Version: 6.4.4.2 (x64)
Build ID: 3d775be2011f3886db32dfd395a6a6d1ca2630ff
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: GL; VCL: win; 
Locale: ro-RO (ro_RO); UI-Language: en-US
Calc: threaded
Comment 6 Xisco Faulí 2020-06-22 09:35:25 UTC
Also reproduced in

Version: 5.2.0.0.alpha0+
Build ID: 3ca42d8d51174010d5e8a32b96e9b4c0b3730a53
Threads 4; Ver: 4.19; Render: default; 

Locale: en-US (en_US.UTF-8)
Comment 7 nd101 2020-06-24 02:21:07 UTC
Patch submitted

https://gerrit.libreoffice.org/c/core/+/96956
Comment 8 Commit Notification 2020-07-13 09:37:01 UTC
nd101 committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4a4fc98e5908db1e027c8438fbbcabefe6b0de8a

tdf#134221 Fix SMARTART caption text location

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Timur 2020-07-17 17:34:33 UTC
Created attachment 163197 [details]
sample in MSO, older Lo and fixed LO

Looks good. Fong, you need to mark Fixed, unless you want to do something else here,
Comment 10 BogdanB 2020-07-18 18:04:48 UTC
I verified, everything is ok, but I can not mark it as verified.

Version: 7.1.0.0.alpha0+
Build ID: fa844c15233f108a0e9b0b2e8c9757c1aa088a4b
CPU threads: 4; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 11 nd101 2020-07-20 03:59:47 UTC
(In reply to Timur from comment #9)
> Created attachment 163197 [details]
> sample in MSO, older Lo and fixed LO
> 
> Looks good. Fong, you need to mark Fixed, unless you want to do something
> else here,

Done