tdf#134221 Fix SMARTART caption text location

Caption text shall be placed off center. Apply the transform2d.

Change-Id: Iefdf207c8aadefecbe2e3154879d03ca10456d7b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/96956
Tested-by: Jenkins
Tested-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>