oox/source/drawingml/transform2dcontext.cxx
@@ -53,7 +53,7 @@ ContextHandlerRef Transform2DContext::onCreateContext( sal_Int32 aElementToken, 
     {
         // Workaround: only for rectangles
         const sal_Int32 nType = mrShape.getCustomShapeProperties()->getShapePresetType();
-        if( nType == XML_rect || nType == XML_roundRect )
+        if( nType == XML_rect || nType == XML_roundRect || nType == XML_ellipse )
         {
             switch( aElementToken )
             {
@@ -62,7 +62,7 @@ ContextHandlerRef Transform2DContext::onCreateContext( sal_Int32 aElementToken, 
                         const OUString sXValue = rAttribs.getString( XML_x ).get();
                         const OUString sYValue = rAttribs.getString( XML_y ).get();
 
-                        if( !sXValue.isEmpty() )
+                        if( !sXValue.isEmpty() && nType != XML_ellipse )
                             mrShape.getTextBody()->getTextProperties().moTextOffLeft = GetCoordinate( sXValue.toInt32() - mrShape.getPosition().X );
                         if( !sYValue.isEmpty() )
                             mrShape.getTextBody()->getTextProperties().moTextOffUpper = GetCoordinate( sYValue.toInt32() - mrShape.getPosition().Y );
